--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    run: |
-      echo "Slug variables"
-      echo $${{ GITHUB_REF }}
-      echo http://${{ GITHUB_REF }}.app.facta.io
+    steps:
+      - name: Do
+        run: |
+          echo "Slug variables"
+          echo $${{ GITHUB_REF }}
+          echo http://${{ GITHUB_REF }}.app.facta.io
