--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,11 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
       - name: Do
         run: |
           echo "Slug variables"
           echo $${{ github.ref }}
           echo http://${{ github.ref }}.lel
-          echo http://${ GITHUB_BRANCH##*/ }.lel
+          echo http://${{ env.GITHUB_REF_SLUG }}.lel
